--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: keithalanrowe
 github_username:  keitharowe
+linkedin_username: keithalanrowe
 
 # Build settings
 theme: minima
