--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Creative Blog Title
+title: { Undefinded Blog Title } 
 author: Keith A. Rowe
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
