--- a/_config.yml
+++ b/_config.yml
@@ -18,11 +18,11 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Undefinded Blog Title
+title: Undefined Blog Title
 author: Keith A. Rowe
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
-  Tech articles and documenation
+  Tech articles and documentation
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: keithalanrowe
