--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: keithalanrowe
 github_username:  keitharowe
 linkedin_username: keithalanrowe
-
+show_excerpts: true
 # Build settings
 theme: minima
 plugins:
